<resources>
    <string name="app_name">AQM</string>

    <string name="label_live">Live</string>
    <string name="label_map">Map</string>

    <string name="label_my_places">My Places</string>
    <string name="label_search_places">Search Places</string>
    <string name="label_aqi">AQI</string>
    <string name="label_search">Search</string>

    <string name="label_aqi_good">Good</string>
    <string name="label_aqi_moderate">Moderate</string>
    <string name="label_aqi_unhealthy_for_sensitive">Unhealthy for sensitive groups</string>
    <string name="label_aqi_unhealthy">Unhealthy</string>
    <string name="label_aqi_very_unhealthy">Very Unhealthy</string>
    <string name="label_aqi_hazardous">Hazardous</string>

    <string name="info_aqi_good">Little to no health risk</string>
    <string name="info_aqi_moderate">Sensitive individuals may experience irritations</string>
    <string name="info_aqi_unhealthy_for_sensitive">Sensitive groups should limit outdoor exertion</string>
    <string name="info_aqi_unhealthy">Harmful for sensitive groups, reduce outdoor activities</string>
    <string name="info_aqi_very_unhealthy">Everyone can be affected. Avoid outdoor activity</string>
    <string name="info_aqi_hazardous">Serious risk of respiratory effects. Everyone should avoid outdoor activity</string>
    <string name="label_tgs2600">TGS 2600</string>
    <string name="label_tgs2602">TGS 2602</string>
    <string name="label_location">Location</string>
    <string name="label_ranking">Ranking</string>

    <string name="label_no_week_data">No data for the last week</string>
    <string name="label_no_month_data">No data for the last month</string>

    <string name="day_short_1">Mon</string>
    <string name="day_short_2">Tue</string>
    <string name="day_short_3">Wed</string>
    <string name="day_short_4">Thu</string>
    <string name="day_short_5">Fri</string>
    <string name="day_short_6">Sun</string>
    <string name="day_short_7">Sat</string>

    <string name="month_short_01">Jan</string>
    <string name="month_short_02">Feb</string>
    <string name="month_short_03">Mar</string>
    <string name="month_short_04">Apr</string>
    <string name="month_short_05">May</string>
    <string name="month_short_06">Jun</string>
    <string name="month_short_07">Jul</string>
    <string name="month_short_08">Aug</string>
    <string name="month_short_09">Sep</string>
    <string name="month_short_10">Oct</string>
    <string name="month_short_11">Nov</string>
    <string name="month_short_12">Dec</string>

    <string name="label_cancel">Cancel</string>
    <string name="label_select_filter">Select filter option</string>
    <string name="label_find">Find</string>

    <string name="label_temperature">Temperature</string>
    <string name="label_pressure">Pressure</string>
    <string name="label_humidity">Humidity</string>

    <string name="label_access_code">Access code</string>
    <string name="message_enter_access_code">If you have access to private place, please enter access code</string>
    <string name="message_no_place">No place found</string>
    <string name="label_aqi_info">AQI Guide</string>
    <string name="text_aqi_info">AQI, or Air Quality Index, is a system for reporting the severity of air quality levels in relatable
    terms to the public. The index ranges from 0 to 500, where high index values indicate higher levels of air pollution and higher potential for adverse
    health effects. Any value larger than 300, for example, is considered to be hazardous, while an AQI value of 0-50, on
    the other hand, represents good air quality.</string>
    <string name="label_tgs_info">TGS Gas Sensors Guide</string>
    <string name="info_tgs_2600">"The TGS 2600 has high sensitivity to low concentrations of gaseous air contaminants such as hydrogen and carbon monoxide which exist in cigarette smoke. The sensor can detect hydrogen at a level of several ppm. "</string>
    <string name="info_tgs_2602">"The TGS 2602 has high sensitivity to low concentrations of odorous gases such as ammonia and H2S generated from waste materials in office and home environments. The sensor also has high sensitivity to low concentrations of VOCs such as toluene emitted from wood finishing and construction products. "</string>
    <string name="label_no_places">You have not added your favorite places yet</string>
</resources>
