<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_live"
    app:startDestination="@id/live_dest">

    <fragment
        android:id="@+id/live_dest"
        android:name="kz.yeltayev.aqms.module.live.LiveFragment"
        android:label="@string/label_live"
        tools:layout="@layout/view_live">
        <action
            android:id="@+id/action_search"
            app:destination="@id/search_places_dest"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"
            app:popEnterAnim="@anim/slide_in_left"
            app:popExitAnim="@anim/slide_out_right" />
        <action
            android:id="@+id/action_live_dest_to_place_dest"
            app:destination="@id/place_dest"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"
            app:popEnterAnim="@anim/slide_in_left"
            app:popExitAnim="@anim/slide_out_right" />
    </fragment>

    <fragment
        android:id="@+id/search_places_dest"
        android:name="kz.yeltayev.aqms.module.searchplaces.SearchPlacesFragment"
        android:label="@string/label_search_places"
        tools:layout="@layout/view_search_places">
        <action
            android:id="@+id/action_search_places_dest_to_place_dest"
            app:destination="@id/place_dest"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"
            app:popEnterAnim="@anim/slide_in_left"
            app:popExitAnim="@anim/slide_out_right" />
    </fragment>

    <fragment
        android:id="@+id/place_dest"
        android:name="kz.yeltayev.aqms.module.place.PlaceFragment"
        android:label="Place"
        tools:layout="@layout/view_place">
        <argument
            android:name="placeUiModel"
            app:argType="kz.yeltayev.aqms.module.live.widget.PlaceUiModel" />
        <action
            android:id="@+id/action_place_dest_to_aqi_info_dest"
            app:destination="@id/aqi_info_dest"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"
            app:popEnterAnim="@anim/slide_in_left"
            app:popExitAnim="@anim/slide_out_right"/>
        <action
            android:id="@+id/action_place_dest_to_tgs_info_dest"
            app:destination="@id/tgs_info_dest"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"
            app:popEnterAnim="@anim/slide_in_left"
            app:popExitAnim="@anim/slide_out_right"/>

    </fragment>

    <fragment
        android:id="@+id/aqi_info_dest"
        android:name="kz.yeltayev.aqms.module.place.aqiinfo.AqiInfoFragment"
        android:label="@string/label_aqi_info"
        tools:layout="@layout/view_aqi_info" />

    <fragment
        android:id="@+id/tgs_info_dest"
        android:name="kz.yeltayev.aqms.module.place.tgsinfo.TgsInfoFragment"
        android:label="@string/label_tgs_info"
        tools:layout="@layout/view_tgs_info" />

</navigation>